src/app/public/components/sidebar/sidebar.component.css
.sidebar {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  background: #ffffff;
  padding: 16px;
}

.logo-section {
  display: flex;
  align-items: center;
  gap: 12px;
  margin-bottom: 24px;
}

.logo {
  height: 40px;
  width: auto;
}

.brand {
  font-family: 'Poppins', sans-serif;
  font-size: 20px;
  font-weight: bold;
  color: #222;
}

.user-info {
  display: flex;
  align-items: center;
  background-color: #f1f5f9;
  border-radius: 12px;
  padding: 1.3rem 0rem 1.3rem 0.9rem;
  margin: 1rem 1rem 1rem 0rem;
  gap: 0.75rem;
  width: 95%;
}

.user-photo {
  width: 55px;
  height: 55px;
  border-radius: 50%;
}

.user-name {
  font-family: 'Poppins', sans-serif;
  font-weight: 600;
  margin: 0;
  color: #111827;
}

.user-email {
  font-size: 15px;
  font-family: 'Inter', sans-serif;
  color: #808D99;
  margin: 0;
}

mat-nav-list {
  display: flex;
  flex-direction: column;
  gap: 1rem;
  padding-left: 1.3rem;
}

.menu-item {
  display: flex;
  align-items: center;
  gap: 2rem;
  padding: 0.5rem 0.8rem;
  border-radius: 8px;
  text-decoration: none;
  color: #808D99;
  font-family: 'Inter', sans-serif;
  font-size: 0.95rem;
  transition: background-color 0.2s ease;
}

a.menu-item {
  text-decoration: none !important;
}

.menu-item:hover {
  background-color: #D5E3D8;
}

.active-link {
  background-color: #D5E3D8;
}

.menu-icon {
  font-size: 22px;
  color: #808D99;
  display: flex;
  align-items: center;
  justify-content: center;
}

.menu-label {
  display: flex;
  align-items: center;
  font-family: 'Poppins', sans-serif;
}


.language-switcher {
  margin-top: 3rem;
  display: flex;
  justify-content: center;
}

.main-content {
  position: relative;
}

.floating-button {
  left: 0 !important;
  right: auto !important;
  transform: none !important;
}

